@@ -25,6 +25,8 @@ c10::Symbol where_;                      // NOLINT
 c10::Symbol poisson_nll_loss;            // NOLINT
 c10::Symbol multilabel_soft_margin_loss; // NOLINT
 c10::Symbol bernoulli_;                  // NOLINT
+c10::Symbol clamp_min_;                  // NOLINT
+c10::Symbol clamp_max_;                  // NOLINT
 
 // clang-format off
 __attribute__((constructor(SYMBOL_INIT_PRIORITY)))
@@ -48,6 +50,8 @@ static void initializeAtenSymbols() {
   SYMBOL_INIT(aten, poisson_nll_loss)
   SYMBOL_INIT(aten, multilabel_soft_margin_loss)
   SYMBOL_INIT(aten, bernoulli_)
+  SYMBOL_INIT(aten, clamp_min_)
+  SYMBOL_INIT(aten, clamp_max_)
 }
 
 } // namespace c10::aten
