@@ -105,6 +105,24 @@ torch::jit::Node *clampHandler(torch::jit::Graph *graph,
   return createClip(graph, {x}, max, min);
 }
 
+torch::jit::Node *clampMinHandler(torch::jit::Graph *graph,
+                                  torch::jit::Node *node) {
+  auto max = graph->createNone()->output();
+  auto input = node->input(0);
+  auto min = node->input(1);
+  auto clamp_handler = getHandler(c10::aten::clamp);
+  return createHandlerOperation(graph, clamp_handler, {input, min, max});
+}
+
+torch::jit::Node *clampMaxHandler(torch::jit::Graph *graph,
+                                  torch::jit::Node *node) {
+  auto min = graph->createNone()->output();
+  auto input = node->input(0);
+  auto max = node->input(1);
+  auto clamp_handler = getHandler(c10::aten::clamp);
+  return createHandlerOperation(graph, clamp_handler, {input, min, max});
+}
+
 } // namespace
 
 __attribute__((constructor(HANDLER_INIT_PRIORITY))) static void registration() {
@@ -116,6 +134,10 @@ __attribute__((constructor(HANDLER_INIT_PRIORITY))) static void registration() {
   registerHandler(c10::aten::true_divide, trueDivideHandler);
   registerHandler(c10::aten::clamp, clampHandler);
   registerHandler(c10::aten::clamp_, clampHandler);
+  registerHandler(c10::aten::clamp_min, clampMinHandler);
+  registerHandler(c10::aten::clamp_min_, clampMinHandler);
+  registerHandler(c10::aten::clamp_max, clampMaxHandler);
+  registerHandler(c10::aten::clamp_max_, clampMaxHandler);
 }
 
 } // namespace poptorch
